Pick up starting position from OpenSLES getPosition().

On older versions of Android it looks like getPosition() does not
return to zero after Clear() is called; so we must pick up the
initial position returned from getPosition() in order to calculate
the delay for our audio stream.

For posterity, I tried calling ClearMarkerPosition(),
SetPositionUpdatePeriod(), and various contortions of using the
returned position without any success. Including continuing to
use the last known position if the starting-position is non-zero.

BUG=627259
TEST=no dcheck.

Review-Url: https://codereview.chromium.org/2142403002
Cr-Commit-Position: refs/heads/master@{#405329}

Former-commit-id: 9ed5f67fdb5b313f3d26e612615ae4812f411620